--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
-<%- include ("partials/header") -%>
-<!-- Scripts -->
+    <%- include ("partials/header") -%>
+    <!-- Scripts -->
 
-<%- include ("pages/home.ejs") -%>
-<!-- End of Scripts -->
-<script src="/src/components/slider.js"></script>
+    <%- include ("pages/home.ejs") -%>
+    <!-- End of Scripts -->
+    <script src="/src/components/slider.js"></script>
+    </body>
+</html>
