--- a/views/mobile/m_index.ejs
+++ b/views/mobile/m_index.ejs
@@ -13,18 +13,18 @@
 	<body>
 		<header class="header">
 			<h1 class="logo"><a href="/"><img class="logo-img" src="./img/images/Logo.jpg" alt="J&M logo"></a></h1>
-			<input type="checkbox" id="nav-toggle" class="nav-toggle"/>
+			<input type="checkbox" id="m_nav-toggle" class="m_nav-toggle"/>
 			<nav class="nav">
-				<ul class="nav__list">
-					<li class="nav__list--item"><a class="nav--link" href="/">Home</a></li>
-					<li class="nav__list--item"><a class="nav--link" href="/services">Services</a></li>
-					<li class="nav__list--item"><a class="nav--link" href="/gallery">Gallery</a></li>
-					<li class="nav__list--item"><a class="nav--link" href="/about-us">About</a></li>
-					<li class="nav__list--item"><a class="nav--link" href="/testimonials">Testimonial</a></li>
-					<li class="nav__list--item"><a class="nav--link" href="/contact" >Contact</a></li>
+				<ul class="m_nav__list">
+					<li class="m_nav__list--item"><a class="nav--link" href="/">Home</a></li>
+					<li class="m_nav__list--item"><a class="nav--link" href="/services">Services</a></li>
+					<li class="m_nav__list--item"><a class="nav--link" href="/gallery">Gallery</a></li>
+					<li class="m_nav__list--item"><a class="nav--link" href="/about-us">About</a></li>
+					<li class="m_nav__list--item"><a class="nav--link" href="/testimonials">Testimonial</a></li>
+					<li class="m_nav__list--item"><a class="nav--link" href="/contact" >Contact</a></li>
 			</ul>
 		</nav>
-		<label for="nav-toggle" class="nav-toggle-label">
+		<label for="m_nav-toggle" class="m_nav-toggle-label">
 			<span></span>
 		</label>
 	</header>
@@ -33,3 +33,6 @@
 	<br>
 	<br>
 	<br>
+<%- include ("m_home.ejs") -%>
+</body>
+</html>
