--- a/views/pages/testimonials.ejs
+++ b/views/pages/testimonials.ejs
@@ -10,8 +10,8 @@
       <figcaption class="review__user">
         <!-- <img src="" alt="User 1" class="review__photo"> -->
         <div class="review__user--box">
-          <p class="review__user--name">Mike Haydis</p>
-          <p class="review__user--date">Feb 23rd, 2017</p>
+          <span class="review__user--name">Mike Haydis</span>
+          <span class="review__user--date">Feb 23rd, 2017</span>
         </div>
         <div class="review__rating">5 stars</div>
         <br>
@@ -27,8 +27,8 @@
       <figcaption class="review__user">
         <!-- <img src="" alt="User 1" class="review__photo"> -->
         <div class="review__user--box">
-          <p class="review__user--name">M D</p>
-          <p class="review__user--date">Feb 23rd, 2017</p>
+          <span class="review__user--name">M D</span>
+          <span class="review__user--date">Feb 23rd, 2017</span>
         </div>
         <div class="review__rating">5 stars</div>
         <br>
@@ -46,8 +46,8 @@
       <figcaption class="review__user">
         <!-- <img src="" alt="User 1" class="review__photo"> -->
         <div class="review__user--box">
-          <p class="review__user--name">James McFarland</p>
-          <p class="review__user--date">Feb 23rd, 2017</p>
+          <span class="review__user--name">James McFarland</span>
+          <span class="review__user--date">Feb 23rd, 2017</span>
         </div>
         <div class="review__rating">5 stars</div>
         <br>
