--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,13 +9,13 @@
         <div class="footer__info--phone">
           Call us: <a class="footer__phone--number" href="tel:866-755-4001">866-755-4001</a> 
         </div>
-        <p>
+        <span>
         OR
         to reach
-        </p>
+        </span>
         <div class="footer__info--sub-contact">
-          <p>Nancy Montellano/Office Manager: <a class="footer__phone--number" href="tel:714-323-0649">714-323-0649</a></p>
-          <p>Katrina Shuper/Administration: <a class="footer__phone--number" href="tel:714-872-7224">714-872-7224</a></p>
+          <span>Nancy Montellano/Office Manager: <a class="footer__phone--number" href="tel:714-323-0649">714-323-0649</a></span>
+          <span>Katrina Shuper/Administration: <a class="footer__phone--number" href="tel:714-872-7224">714-872-7224</a></span>
         </div>
         <div class="footer__info--email">
           Email us: SERVICE@JMGCINC.COM
