--- a/public/sass/components/_typewriter.scss
+++ b/public/sass/components/_typewriter.scss
@@ -39,23 +39,9 @@
 		// 	backdrop-filter: blur(4px);
 		// }
 	}
-
-	@media only screen and (hover: none) and (pointer: coarse) {
-		width: 100%;
-		height: 100%;
-		padding: 0 1rem;
-		margin: auto auto;
-
-		clip-path: none;
-		background-image: linear-gradient(
-			to right bottom,
-			rgba(0, 0, 0, 0.541),
-			rgba(39, 52, 99, 0.568)
-		);
-
-		border-radius: 1rem;
-	}
 }
+
+
 
 /* Cursor */
 .txt-type > .txt {
@@ -123,5 +109,82 @@
 		@media only screen and (max-width: $bp-medium) {
 			color: #000;
 		}
+	}
+}
+
+// for mobile
+
+.m_typewriter__container {
+	position: absolute;
+	margin: auto auto;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	height: 100%;
+	width: 100%;
+	padding: 0 1rem;
+
+	background: rgba(194, 192, 192, 0.534);
+	z-index: 10;
+	clip-path: none;
+	
+	background-image: linear-gradient(
+		to right bottom,
+		rgba(0, 0, 0, 0.541),
+		rgba(39, 52, 99, 0.568)
+	);
+
+	border-radius: 1rem;
+
+	@supports (backdrop-filter: blur(4px)) {
+		backdrop-filter: blur(4px);
+	}
+}
+
+.m_typewriter--header1,
+.m_typewriter--header2 {
+	color: var(--white);
+	font-weight: 200;
+	margin: 0.4rem;
+
+	@media only screen and (max-width: $bp-medium) {
+		// background-image: linear-gradient(
+		// 	to right bottom,
+		// 	rgba(0, 0, 0, 0.85),
+		// 	rgba(39, 52, 99, 0.85)
+		// );
+
+		color: var(--white);
+	}
+}
+
+.m_typewriter--header1 {
+	text-align: center;
+
+	@media only screen and (max-width: $bp-large) {
+		font-size: 4rem;
+	}
+
+	@media only screen and (max-width: $bp-medium) {
+		font-size: 3rem;
+	}
+
+	@media only screen and (max-width: $bp-small) {
+		font-size: 2.5rem;
+	}
+}
+
+.m_typewriter--header2 {
+	font-size: 2rem;
+	padding-bottom: 2rem;
+	@media only screen and (max-width: $bp-medium) {
+		font-size: 1.7rem;
+	}
+
+	@media only screen and (max-width: $bp-small) {
+		font-size: 1.5rem;
 	}
 }
